<resources>
    <string name="app_name">DragonHack</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Products</string>
    <string name="menu_gallery">Add new product</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="scan">Scan barcode</string>
    <string name="item_name">No item</string>
    <string name="amount_text">Amount:</string>
    <string name="text_expiration_date">Expiration Date:</string>
    <string name="save_product_button">Save product</string>
</resources>